--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
