--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta property="og:site_name" content="My Website" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="my website title" />
+    <meta property="og:url" content="https://my.website.com/" />
+    <meta property="og:description" content="my website description" />
+    <meta property="og:image" content="https://my.storage/image.png" />
+
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/png" />
     <link rel="icon" type="image/png" href="img/icons/favicon.png" />
+    <meta name="Бухгалтерские услуги" content="Page description." />
 
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon-xyz.png"> -->
-
-
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css?family=Play&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,600,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Play&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,600,700&display=swap"
+      rel="stylesheet"
+    />
 
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
