--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
 
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/png" />
     <link rel="icon" type="image/png" href="img/icons/favicon.png" />
-    <meta name="Бухгалтерские услуги" content="Page description." />
+
+    <meta name="description" content="Page description." />
 
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon-xyz.png"> -->
 
