Fixed bug with top button

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,15 @@
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/png" />
     <link rel="icon" type="image/png" href="img/icons/favicon.png" />
 
-    <meta name="description" content="Page description." />
-
-    <!-- <link rel="icon" href="<%= BASE_URL %>favicon-xyz.png"> -->
+    <meta
+      name="title"
+      content=" Он должен стимулировать пользователей к переходу на сайт."
+    />
+    <meta
+      name="description"
+      content="Размер meta description не должен превышать 100-140 символов"
+    />
+    <meta name="keywords" content="мета теги, meta, мета теги для seo" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
@@ -31,7 +37,8 @@
       rel="stylesheet"
     />
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>Smart Mind</title>
   </head>
   <body>
     <noscript>
