Changed contacts and titles

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     />
 
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
-    <title>Smart Mind</title>
+    <title>WisExpert</title>
   </head>
   <body>
     <noscript>
