IMages to jpg, Fixed bugs with locale, meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,39 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta property="og:site_name" content="My Website" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="my website title" />
-    <meta property="og:url" content="https://my.website.com/" />
-    <meta property="og:description" content="my website description" />
-    <meta property="og:image" content="https://my.storage/image.png" />
+
+    <!-- Facebook -->
+    <meta
+      property="og:site_name"
+      content="WisExpert. Бухгалтерские услуги Киев"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="WisExpert. Бухгалтерские услуги Киев" />
+    <meta property="og:url" content="http://wisexpert.com.ua/" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta
+      property="og:description"
+      content="Предоставление бухгалтерских услуг для всех видов бизнеса. Бухгалтерия от первичной документации до подачи отчетов и оплаты налогов"
+    />
+
+    <meta
+      property="og:image"
+      content="http://wisexpert.com.ua/facebook-logo.png"
+    />
+    <!-- //Facebook -->
 
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/png" />
     <link rel="icon" type="image/png" href="img/icons/favicon.png" />
 
-    <meta
-      name="title"
-      content=" Он должен стимулировать пользователей к переходу на сайт."
-    />
+    <meta name="title" content="Бухгалтерские услуги Киев" />
     <meta
       name="description"
-      content="Размер meta description не должен превышать 100-140 символов"
+      content="Предоставление бухгалтерских услуг для всех видов бизнеса. Бухгалтерия от первичной документации до подачи отчетов и оплаты налогов"
     />
-    <meta name="keywords" content="мета теги, meta, мета теги для seo" />
+    <meta
+      name="keywords"
+      content="бухгалтер, налог, отчет, бухгалтерія, звіт, податок, учет, ФОП, ТОВ, ФЛП, ООО, консультація, РРО, ЕСВ, ЄСВ, Бухгалтерская компания, Бухгальтерська фірма, компанія, послуги бухгалтера, услуги бухгалтера"
+    />
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
