--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
 
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/png" />
     <link rel="icon" type="image/png" href="img/icons/favicon.png" />
-
+    <meta
+      name="google-site-verification"
+      content="SgO2gin2kUm4d4AXxu9Nm0kEePES_gHTrvVs_jHobk0"
+    />
     <meta name="title" content="Бухгалтерские услуги Киев" />
     <meta
       name="description"
