--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>WisExpert</title>
     <!-- Facebook Pixel Code -->
