Removed fonts, removed facebook pixel

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,24 @@
       content="Предоставление бухгалтерских услуг для всех видов бизнеса. Бухгалтерия от первичной документации до подачи отчетов и оплаты налогов"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Play&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,600,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
     <meta
       property="og:image"
       content="http://wisexpert.com.ua/facebook-logo.png"
@@ -44,7 +62,7 @@
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>WisExpert</title>
     <!-- Facebook Pixel Code -->
-    <script>
+    <!-- <script>
       !(function(f, b, e, v, n, t, s) {
         if (f.fbq) return;
         n = f.fbq = function() {
@@ -70,7 +88,7 @@
       );
       fbq("init", "701660370775621");
       fbq("track", "PageView");
-    </script>
+    </script> -->
     <noscript
       ><img
         height="1"
