Changed title and description, removed scroll

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
+    <title>Бухгалтерська компанія WisExpert</title>
+    <meta
+      name="description"
+      content="Якісні бухгалтерські послуги для ІТ компаній, ресторанів, виробництва, торгівлі, будівництва та ін. Дізнайтесь ціни та умови на сайті"
+    />
+
     <!-- Facebook -->
     <meta
       property="og:site_name"
@@ -50,14 +56,6 @@
       content="SgO2gin2kUm4d4AXxu9Nm0kEePES_gHTrvVs_jHobk0"
     />
     <meta name="title" content="Бухгалтерские услуги Киев" />
-    <meta
-      name="description"
-      content="Предоставление бухгалтерских услуг для всех видов бизнеса. Бухгалтерия от первичной документации до подачи отчетов и оплаты налогов"
-    />
-    <meta
-      name="keywords"
-      content="бухгалтер, налог, отчет, бухгалтерія, звіт, податок, учет, ФОП, ТОВ, ФЛП, ООО, консультація, РРО, ЕСВ, ЄСВ, Бухгалтерская компания, Бухгальтерська фірма, компанія, послуги бухгалтера, услуги бухгалтера"
-    />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -74,7 +72,7 @@
       gtag("config", "G-BRLHJRE03F");
     </script>
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
-    <title>WisExpert</title>
+
     <!-- Facebook Pixel Code -->
     <!-- <script>
       !(function(f, b, e, v, n, t, s) {
