--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,14 @@
     />
 
     <!-- Facebook -->
-    <meta
-      property="og:site_name"
-      content="WisExpert. Бухгалтерские услуги Киев"
-    />
+    <meta property="og:site_name" content="Бухгалтерська компанія WisExpert" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="WisExpert. Бухгалтерские услуги Киев" />
+    <meta property="og:title" content="Бухгалтерська компанія WisExpert" />
     <meta property="og:url" content="http://wisexpert.com.ua/" />
     <meta property="og:locale" content="ru_RU" />
     <meta
       property="og:description"
-      content="Предоставление бухгалтерских услуг для всех видов бизнеса. Бухгалтерия от первичной документации до подачи отчетов и оплаты налогов"
+      content="Якісні бухгалтерські послуги для ІТ компаній, ресторанів, виробництва, торгівлі, будівництва та ін. Дізнайтесь ціни та умови на сайті"
     />
 
     <link
