--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
+      gtag('js', new Date());
 
-      gtag("config", "G-BRLHJRE03F");
+      gtag('config', 'G-BRLHJRE03F');
     </script>
 
     <!-- Facebook Pixel Code -->
