--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,10 @@
       content="SgO2gin2kUm4d4AXxu9Nm0kEePES_gHTrvVs_jHobk0"
     />
     <meta name="title" content="Бухгалтерские услуги Киев" />
-
+    <meta
+      name="keywords"
+      content="бухгалтер, налог, отчет, бухгалтерія, звіт, податок, учет, ФОП, ТОВ, ФЛП, ООО, консультація, РРО, ЕСВ, ЄСВ, Бухгалтерская компания, Бухгальтерська фірма, компанія, послуги бухгалтера, услуги бухгалтера"
+    />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
